--- a/homeRMC/manifest.json
+++ b/homeRMC/manifest.json
@@ -1,23 +1,14 @@
-{
-  "name": "Home Control System",
-  "short_name": "HomeControl",
-  "start_url": "./homeRMC.html",
-  "scope": "./",
-  "display": "standalone",
-  "background_color": "#1f2430",
-  "theme_color": "#1f2430",
-  "icons": [
-    {
-      "src": "homeRMC.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "homeRMC.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    }
-  ]
-}
+"icons": [
+  {
+    "src": "homeRMC.png",
+    "sizes": "192x192",
+    "type": "image/png",
+    "purpose": "any maskable"
+  },
+  {
+    "src": "homeRMC.png",
+    "sizes": "512x512",
+    "type": "image/png",
+    "purpose": "any maskable"
+  }
+]
