--- a/homeRMC/manifest.json
+++ b/homeRMC/manifest.json
@@ -1,14 +1,25 @@
-"icons": [
-  {
-    "src": "homeRMC.png",
-    "sizes": "192x192",
-    "type": "image/png",
-    "purpose": "any maskable"
-  },
-  {
-    "src": "homeRMC.png",
-    "sizes": "512x512",
-    "type": "image/png",
-    "purpose": "any maskable"
-  }
-]
+{
+  "id": "/ESP32/",
+  "name": "Home Control System",
+  "short_name": "HomeControl",
+  "start_url": "./homeRMC.html",
+  "scope": "./",
+  "display": "standalone",
+  "orientation": "portrait",
+  "background_color": "#1f2430",
+  "theme_color": "#1f2430",
+  "icons": [
+    {
+      "src": "homeRMC.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "homeRMC.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
+  ]
+}
