--- a/loraMesh/manifest.json
+++ b/loraMesh/manifest.json
@@ -9,13 +9,9 @@
   "icons": [
     {
       "src": "/loraMesh/loraMesh.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/loraMesh/loraMesh.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "sizes": "1024x1024",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
