--- a/myHome/icons/manifest.json
+++ b/myHome/icons/manifest.json
@@ -1,22 +1,20 @@
 {
   "name": "My Smart Home",
   "short_name": "MyHome",
-  "start_url": "../myhome.html",
-  "scope": "../",
+  "start_url": "./myhome.html",
   "display": "standalone",
-  "background_color": "#1f7cc6",
+  "background_color": "#eef3f7",
   "theme_color": "#1f7cc6",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "./icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "./icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "id": "../myhome.html"
+  ]
 }
