--- a/myHome/icons/manifest.json
+++ b/myHome/icons/manifest.json
@@ -1,20 +1,22 @@
 {
   "name": "My Smart Home",
   "short_name": "MyHome",
-  "start_url": "./myhome.html",
+  "start_url": "/ESP32/myHome/myhome.html",
+  "scope": "/ESP32/myHome/",
   "display": "standalone",
-  "background_color": "#eef3f7",
+  "background_color": "#1f7cc6",
   "theme_color": "#1f7cc6",
   "icons": [
     {
-      "src": "./icon-192x192.png",
+      "src": "icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "./icon-512x512.png",
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "id": "/ESP32/myHome/myhome.html"
 }
